<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XML serialisation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_main">Game History</string>
    <string name="label_playername">Player name:</string>
    <string name="label_playerscore">Player score:</string>
    <string name="hint_playername">Player name</string>
    <string name="hint_playerscore">Player score</string>
    <string name="btn_storedata">Store data</string>
    <string name="btn_retrievedata">Retrieve data</string>
        <string name="btn_addplayer">Add player</string>
    

</resources>